# self-interpreter

./: .gitignore  README.md  build-binary.sh  pyproject.toml
src/interpreting/: Interpreter.py
src/interpreting/objects/primitive_objects/: SelfLobby.py
